# grant-tagging-system

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.backend.prod  Dockerfile.frontend.prod  LOOM_SCRIPT.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  Dockerfile  app.py  pyproject.toml
backend/scripts/: seed.py
backend/src/: llm_refine.py  models.py  search_index.py  store.py  synonyms.py  tagging.py  tags.py
backend/tests/: test_app.py  test_llm.py  test_search_index.py  test_synonyms.py  test_tagging.py
data/: grants_seed.json  seed.json
frontend/: Dockerfile  index.html  nginx.conf  package.json
frontend/src/: App.tsx
frontend/src/components/: AddGrants.tsx  Browse.tsx  GrantCard.tsx
frontend/src/lib/: api.ts  hooks.ts  types.ts  utils.ts
